js enhancements: animated background hue, randomized lyrics, dynamic copyright year

--- a/src/index.pug
+++ b/src/index.pug
@@ -145,7 +145,11 @@ body
    p.p5.md-p1.white-trans.md-text-center.josefin-sans swim before you sink the bottom her deepest blue float don't overthink for all she knows, will weigh you down  leave 'em all behind you butterfly in the deep end give in to the moment before it's through  rising to the skyline panorama endless gentle understanding of caring less  ages we flow through aren't candles to right now so much light we see don't douse me with your salty eyes  leaving us behind you butterfly in the deep end you only have a moment and then it's through  rising to the skyline panorama endless gentle understanding of caring less  parallax always from different places separate ways towards the same thing dirty globe we burned it down together journey on towards the same dream  leaving her behind me blow up dolls in the deep end if we had a moment then now it's through  rising to the skyline panorama shameless gentle reminder to care much less  refracting each other outwardly escaping refracting making colors i just want the same thing
   footer.bg-black-trans
     .block.h6.md-h4.text-center.white.text12.flex.flex-row.justify-center.items-center
-      span &copy; 2023 Deep End Youth 
+      span
+        | &copy; 
+        span#footer-copyright 2023
+        | 
+        | Deep End Youth 
       span.text18 &nbsp;&nbsp;&nbsp;
       a.social.ml1(href="https://www.facebook.com/profile.php?id=100094076713054")
         img.inline(src="./images/facebook.svg")
