--- a/src/pug/head.pug
+++ b/src/pug/head.pug
@@ -22,7 +22,7 @@ head
   meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
   meta(name='description', content='Official website for indie post-punk synth po artist Deep End Youth')
   link(href='https://www.deependyouth.com', rel='canonical')
-  title Deep End Youth Offical Artist Page
+  title Deep End Youth Official Artist Page
   link(rel='stylesheet', href='./css/styles.css')
   script(src='./js/app.js')
   link(rel='apple-touch-icon', sizes='180x180', href='/apple-touch-icon.png')
